Assgn5/y.output
Terminals unused in grammar

    ENUMERATION_CONST
    STRUCT
    TYPEDEF
    UNION
    HASH


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERALS
    4                   | LEFT_ROUND expression RIGHT_ROUND

    5 CONSTANT: INTEGER_CONST
    6         | FLOATING_CONST
    7         | CHARACTER_CONST

    8 postfix_expression: primary_expression
    9                   | postfix_expression LEFT_SQUARE expression RIGHT_SQUARE
   10                   | postfix_expression LEFT_ROUND argument_expression_list RIGHT_ROUND
   11                   | postfix_expression LEFT_ROUND RIGHT_ROUND
   12                   | postfix_expression DOT IDENTIFIER
   13                   | postfix_expression POINTER_OP IDENTIFIER
   14                   | postfix_expression INCREMENT_OP
   15                   | postfix_expression DECREMENT_OP
   16                   | LEFT_ROUND type_name RIGHT_ROUND LEFT_CURLY initializer_list RIGHT_CURLY
   17                   | LEFT_ROUND type_name RIGHT_ROUND LEFT_CURLY initializer_list COMMA RIGHT_CURLY

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list COMMA assignment_expression

   20 unary_expression: postfix_expression
   21                 | INCREMENT_OP unary_expression
   22                 | DECREMENT_OP unary_expression
   23                 | unary_operator cast_expression
   24                 | SIZEOF unary_expression
   25                 | SIZEOF LEFT_ROUND type_name RIGHT_ROUND

   26 unary_operator: BIT_AND
   27               | MUL
   28               | ADD
   29               | SUB
   30               | NEG
   31               | EXCL

   32 cast_expression: unary_expression
   33                | LEFT_ROUND type_name RIGHT_ROUND cast_expression

   34 multiplicative_expression: cast_expression
   35                          | multiplicative_expression MUL cast_expression
   36                          | multiplicative_expression DIV cast_expression
   37                          | multiplicative_expression MOD cast_expression

   38 additive_expression: multiplicative_expression
   39                    | additive_expression ADD multiplicative_expression
   40                    | additive_expression SUB multiplicative_expression

   41 shift_expression: additive_expression
   42                 | shift_expression LEFT_LOGICAL_OP additive_expression
   43                 | shift_expression RIGHT_LOGICAL_OP additive_expression

   44 relational_expression: shift_expression
   45                      | relational_expression LT_OP shift_expression
   46                      | relational_expression GT_OP shift_expression
   47                      | relational_expression LE_OP shift_expression
   48                      | relational_expression GE_OP shift_expression

   49 equality_expression: relational_expression
   50                    | equality_expression EQ_OP relational_expression
   51                    | equality_expression NE_OP relational_expression

   52 and_expression: equality_expression
   53               | and_expression BIT_AND equality_expression

   54 exclusive_or_expression: and_expression
   55                        | exclusive_or_expression BIT_XOR and_expression

   56 inclusive_or_expression: exclusive_or_expression
   57                        | inclusive_or_expression BIT_OR exclusive_or_expression

   58 logical_and_expression: inclusive_or_expression
   59                       | logical_and_expression N AND_LOGICAL_OP M inclusive_or_expression

   60 logical_or_expression: logical_and_expression
   61                      | logical_or_expression N OR_LOGICAL_OP M logical_and_expression

   62 M: %empty

   63 N: %empty

   64 conditional_expression: logical_or_expression
   65                       | logical_or_expression N QUES M expression N COLON M conditional_expression

   66 assignment_expression: conditional_expression
   67                      | unary_expression assignment_operator assignment_expression

   68 assignment_operator: EQUALS
   69                    | MUL_ASSIGN
   70                    | DIV_ASSIGN
   71                    | MOD_ASSIGN
   72                    | ADD_ASSIGN
   73                    | SUB_ASSIGN
   74                    | LEFT_ASSIGN
   75                    | RIGHT_ASSIGN
   76                    | AND_ASSIGN
   77                    | XOR_ASSIGN
   78                    | OR_ASSIGN

   79 expression: assignment_expression
   80           | expression COMMA assignment_expression

   81 constant_expression: conditional_expression

   82 declaration: declaration_specifiers SEMICOLON
   83            | declaration_specifiers init_declarator_list SEMICOLON

   84 declaration_specifiers: storage_class_specifier
   85                       | storage_class_specifier declaration_specifiers
   86                       | type_specifier
   87                       | type_specifier declaration_specifiers
   88                       | type_qualifier
   89                       | type_qualifier declaration_specifiers
   90                       | function_specifier
   91                       | function_specifier declaration_specifiers

   92 init_declarator_list: init_declarator
   93                     | init_declarator_list COMMA init_declarator

   94 init_declarator: declarator
   95                | declarator EQUALS initializer

   96 storage_class_specifier: EXTERN
   97                        | STATIC
   98                        | AUTO
   99                        | REGISTER

  100 type_specifier: VOID
  101               | CHAR
  102               | SHORT
  103               | INT
  104               | LONG
  105               | FLOAT
  106               | DOUBLE
  107               | SIGNED
  108               | UNSIGNED
  109               | BOOL
  110               | COMPLEX
  111               | IMAGINARY
  112               | enum_specifier

  113 specifier_qualifier_list: type_specifier specifier_qualifier_list
  114                         | type_specifier
  115                         | type_qualifier specifier_qualifier_list
  116                         | type_qualifier

  117 enum_specifier: ENUM LEFT_CURLY enumerator_list RIGHT_CURLY
  118               | ENUM IDENTIFIER LEFT_CURLY enumerator_list RIGHT_CURLY
  119               | ENUM LEFT_CURLY enumerator_list COMMA RIGHT_CURLY
  120               | ENUM IDENTIFIER LEFT_CURLY enumerator_list COMMA RIGHT_CURLY
  121               | ENUM IDENTIFIER

  122 enumerator_list: enumerator
  123                | enumerator_list COMMA enumerator

  124 enumerator: IDENTIFIER
  125           | IDENTIFIER EQUALS constant_expression

  126 type_qualifier: CONST
  127               | VOLATILE
  128               | RESTRICT

  129 function_specifier: INLINE

  130 declarator: pointer direct_declarator
  131           | direct_declarator

  132 direct_declarator: IDENTIFIER
  133                  | LEFT_ROUND declarator RIGHT_ROUND
  134                  | direct_declarator LEFT_SQUARE type_qualifier_list assignment_expression RIGHT_SQUARE
  135                  | direct_declarator LEFT_SQUARE type_qualifier_list RIGHT_SQUARE
  136                  | direct_declarator LEFT_SQUARE assignment_expression RIGHT_SQUARE
  137                  | direct_declarator LEFT_SQUARE RIGHT_SQUARE
  138                  | direct_declarator LEFT_SQUARE type_qualifier_list MUL RIGHT_SQUARE
  139                  | direct_declarator LEFT_SQUARE STATIC type_qualifier_list assignment_expression RIGHT_SQUARE
  140                  | direct_declarator LEFT_SQUARE STATIC assignment_expression RIGHT_SQUARE
  141                  | direct_declarator LEFT_SQUARE MUL RIGHT_SQUARE
  142                  | direct_declarator LEFT_ROUND CT parameter_type_list RIGHT_ROUND
  143                  | direct_declarator LEFT_ROUND identifier_list RIGHT_ROUND
  144                  | direct_declarator LEFT_ROUND CT RIGHT_ROUND

  145 CT: %empty

  146 pointer: MUL
  147        | MUL type_qualifier_list
  148        | MUL pointer
  149        | MUL type_qualifier_list pointer

  150 type_qualifier_list: type_qualifier
  151                    | type_qualifier_list type_qualifier

  152 parameter_type_list: parameter_list
  153                    | parameter_list COMMA ELLIPSIS

  154 parameter_list: parameter_declaration
  155               | parameter_list COMMA parameter_declaration

  156 parameter_declaration: declaration_specifiers declarator
  157                      | declaration_specifiers

  158 identifier_list: IDENTIFIER
  159                | identifier_list COMMA IDENTIFIER

  160 type_name: specifier_qualifier_list

  161 initializer: assignment_expression
  162            | LEFT_CURLY initializer_list RIGHT_CURLY
  163            | LEFT_CURLY initializer_list COMMA RIGHT_CURLY

  164 initializer_list: initializer
  165                 | designation initializer
  166                 | initializer_list COMMA initializer
  167                 | initializer_list COMMA designation initializer

  168 designation: designator_list EQUALS

  169 designator_list: designator
  170                | designator_list designator

  171 designator: LEFT_SQUARE constant_expression RIGHT_SQUARE
  172           | DOT IDENTIFIER

  173 statement: labeled_statement
  174          | compound_statement
  175          | expression_statement
  176          | selection_statement
  177          | iteration_statement
  178          | jump_statement

  179 labeled_statement: IDENTIFIER COLON statement
  180                  | CASE constant_expression COLON statement
  181                  | DEFAULT COLON statement

  182 compound_statement: LEFT_CURLY RIGHT_CURLY
  183                   | LEFT_CURLY block_item_list RIGHT_CURLY

  184 block_item_list: block_item
  185                | block_item_list M block_item

  186 block_item: declaration
  187           | statement

  188 expression_statement: SEMICOLON
  189                     | expression SEMICOLON

  190 selection_statement: IF LEFT_ROUND expression N RIGHT_ROUND M statement N
  191                    | IF LEFT_ROUND expression N RIGHT_ROUND M statement N ELSE M statement
  192                    | SWITCH LEFT_ROUND expression RIGHT_ROUND statement

  193 iteration_statement: WHILE M LEFT_ROUND expression RIGHT_ROUND M statement
  194                    | DO M statement M WHILE LEFT_ROUND expression RIGHT_ROUND SEMICOLON
  195                    | FOR LEFT_ROUND expression_statement M expression_statement RIGHT_ROUND M statement
  196                    | FOR LEFT_ROUND expression_statement M expression_statement M expression N RIGHT_ROUND M statement

  197 jump_statement: GOTO IDENTIFIER SEMICOLON
  198               | CONTINUE SEMICOLON
  199               | BREAK SEMICOLON
  200               | RETURN SEMICOLON
  201               | RETURN expression SEMICOLON

  202 translation_unit: external_declaration
  203                 | translation_unit external_declaration

  204 external_declaration: function_definition
  205                     | declaration

  206 function_definition: declaration_specifiers declarator declaration_list CT compound_statement
  207                    | declaration_specifiers declarator CT compound_statement
  208                    | declarator declaration_list compound_statement
  209                    | declarator compound_statement

  210 declaration_list: declaration
  211                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <symp> (258) 1 12 13 118 120 121 124 125 132 158 159 172 179 197
    INTEGER_CONST <intval> (259) 5
    FLOATING_CONST <charval> (260) 6
    CHARACTER_CONST <charval> (261) 7
    ENUMERATION_CONST <charval> (262)
    STRING_LITERALS <charval> (263) 3
    AUTO (264) 98
    ENUM (265) 117 118 119 120 121
    RESTRICT (266) 128
    UNSIGNED (267) 108
    BREAK (268) 199
    EXTERN (269) 96
    RETURN (270) 200 201
    VOID (271) 100
    CASE (272) 180
    FLOAT (273) 105
    SHORT (274) 102
    VOLATILE (275) 127
    CHAR (276) 101
    FOR (277) 195 196
    SIGNED (278) 107
    WHILE (279) 193 194
    CONST (280) 126
    GOTO (281) 197
    SIZEOF (282) 24 25
    BOOL (283) 109
    CONTINUE (284) 198
    IF (285) 190 191
    STATIC (286) 97 139 140
    COMPLEX (287) 110
    DEFAULT (288) 181
    INLINE (289) 129
    STRUCT (290)
    IMAGINARY (291) 111
    DO (292) 194
    INT (293) 103
    SWITCH (294) 192
    DOUBLE (295) 106
    LONG (296) 104
    TYPEDEF (297)
    ELSE (298) 191
    REGISTER (299) 99
    UNION (300)
    LEFT_SQUARE (301) 9 134 135 136 137 138 139 140 141 171
    RIGHT_SQUARE (302) 9 134 135 136 137 138 139 140 141 171
    LEFT_ROUND (303) 4 10 11 16 17 25 33 133 142 143 144 190 191 192 193 194 195 196
    RIGHT_ROUND (304) 4 10 11 16 17 25 33 133 142 143 144 190 191 192 193 194 195 196
    LEFT_CURLY (305) 16 17 117 118 119 120 162 163 182 183
    RIGHT_CURLY (306) 16 17 117 118 119 120 162 163 182 183
    DOT (307) 12 172
    LE_OP (308) 47
    GE_OP (309) 48
    EQ_OP (310) 50
    NE_OP (311) 51
    AND_LOGICAL_OP (312) 59
    OR_LOGICAL_OP (313) 61
    LT_OP (314) 45
    GT_OP (315) 46
    POINTER_OP (316) 13
    INCREMENT_OP (317) 14 21
    DECREMENT_OP (318) 15 22
    LEFT_LOGICAL_OP (319) 42
    RIGHT_LOGICAL_OP (320) 43
    MUL_ASSIGN (321) 69
    DIV_ASSIGN (322) 70
    MOD_ASSIGN (323) 71
    ADD_ASSIGN (324) 72
    SUB_ASSIGN (325) 73
    LEFT_ASSIGN (326) 74
    RIGHT_ASSIGN (327) 75
    AND_ASSIGN (328) 76
    XOR_ASSIGN (329) 77
    OR_ASSIGN (330) 78
    EQUALS (331) 68 95 125 168
    ADD (332) 28 39
    SUB (333) 29 40
    MUL (334) 27 35 138 141 146 147 148 149
    NEG (335) 30
    BIT_AND (336) 26 53
    MOD (337) 37
    DIV (338) 36
    EXCL (339) 31
    BIT_XOR (340) 55
    BIT_OR (341) 57
    QUES (342) 65
    COLON (343) 65 179 180 181
    SEMICOLON (344) 82 83 188 189 194 197 198 199 200 201
    ELLIPSIS (345) 153
    COMMA (346) 17 19 80 93 119 120 123 153 155 159 163 166 167
    HASH (347)
    THEN (348)


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    primary_expression <E> (95)
        on left: 1 2 3 4
        on right: 8
    CONSTANT <symp> (96)
        on left: 5 6 7
        on right: 2
    postfix_expression <A> (97)
        on left: 8 9 10 11 12 13 14 15 16 17
        on right: 9 10 11 12 13 14 15 20
    argument_expression_list <intval> (98)
        on left: 18 19
        on right: 10 19
    unary_expression <A> (99)
        on left: 20 21 22 23 24 25
        on right: 21 22 24 32 67
    unary_operator <unaryOperator> (100)
        on left: 26 27 28 29 30 31
        on right: 23
    cast_expression <A> (101)
        on left: 32 33
        on right: 23 33 34 35 36 37
    multiplicative_expression <E> (102)
        on left: 34 35 36 37
        on right: 35 36 37 38 39 40
    additive_expression <E> (103)
        on left: 38 39 40
        on right: 39 40 41 42 43
    shift_expression <E> (104)
        on left: 41 42 43
        on right: 42 43 44 45 46 47 48
    relational_expression <E> (105)
        on left: 44 45 46 47 48
        on right: 45 46 47 48 49 50 51
    equality_expression <E> (106)
        on left: 49 50 51
        on right: 50 51 52 53
    and_expression <E> (107)
        on left: 52 53
        on right: 53 54 55
    exclusive_or_expression <E> (108)
        on left: 54 55
        on right: 55 56 57
    inclusive_or_expression <E> (109)
        on left: 56 57
        on right: 57 58 59
    logical_and_expression <E> (110)
        on left: 58 59
        on right: 59 60 61
    logical_or_expression <E> (111)
        on left: 60 61
        on right: 61 64 65
    M <instr> (112)
        on left: 62
        on right: 59 61 65 185 190 191 193 194 195 196
    N <S> (113)
        on left: 63
        on right: 59 61 65 190 191 196
    conditional_expression <E> (114)
        on left: 64 65
        on right: 65 66 81
    assignment_expression <E> (115)
        on left: 66 67
        on right: 18 19 67 79 80 134 136 139 140 161
    assignment_operator (116)
        on left: 68 69 70 71 72 73 74 75 76 77 78
        on right: 67
    expression <E> (117)
        on left: 79 80
        on right: 4 9 65 80 189 190 191 192 193 194 196 201
    constant_expression (118)
        on left: 81
        on right: 125 171 180
    declaration (119)
        on left: 82 83
        on right: 186 205 210 211
    declaration_specifiers (120)
        on left: 84 85 86 87 88 89 90 91
        on right: 82 83 85 87 89 91 156 157 206 207
    init_declarator_list (121)
        on left: 92 93
        on right: 83 93
    init_declarator <symp> (122)
        on left: 94 95
        on right: 92 93
    storage_class_specifier (123)
        on left: 96 97 98 99
        on right: 84 85
    type_specifier (124)
        on left: 100 101 102 103 104 105 106 107 108 109 110 111 112
        on right: 86 87 113 114
    specifier_qualifier_list (125)
        on left: 113 114 115 116
        on right: 113 115 160
    enum_specifier (126)
        on left: 117 118 119 120 121
        on right: 112
    enumerator_list (127)
        on left: 122 123
        on right: 117 118 119 120 123
    enumerator (128)
        on left: 124 125
        on right: 122 123
    type_qualifier (129)
        on left: 126 127 128
        on right: 88 89 115 116 150 151
    function_specifier (130)
        on left: 129
        on right: 90 91
    declarator <symp> (131)
        on left: 130 131
        on right: 94 95 133 156 206 207 208 209
    direct_declarator <symp> (132)
        on left: 132 133 134 135 136 137 138 139 140 141 142 143 144
        on right: 130 131 134 135 136 137 138 139 140 141 142 143 144
    CT (133)
        on left: 145
        on right: 142 144 206 207
    pointer <symtp> (134)
        on left: 146 147 148 149
        on right: 130 148 149
    type_qualifier_list (135)
        on left: 150 151
        on right: 134 135 138 139 147 149 151
    parameter_type_list (136)
        on left: 152 153
        on right: 142
    parameter_list (137)
        on left: 154 155
        on right: 152 153 155
    parameter_declaration (138)
        on left: 156 157
        on right: 154 155
    identifier_list (139)
        on left: 158 159
        on right: 143 159
    type_name (140)
        on left: 160
        on right: 16 17 25 33
    initializer <symp> (141)
        on left: 161 162 163
        on right: 95 164 165 166 167
    initializer_list (142)
        on left: 164 165 166 167
        on right: 16 17 162 163 166 167
    designation (143)
        on left: 168
        on right: 165 167
    designator_list (144)
        on left: 169 170
        on right: 168 170
    designator (145)
        on left: 171 172
        on right: 169 170
    statement <S> (146)
        on left: 173 174 175 176 177 178
        on right: 179 180 181 187 190 191 192 193 194 195 196
    labeled_statement <S> (147)
        on left: 179 180 181
        on right: 173
    compound_statement <S> (148)
        on left: 182 183
        on right: 174 206 207 208 209
    block_item_list <S> (149)
        on left: 184 185
        on right: 183 185
    block_item <S> (150)
        on left: 186 187
        on right: 184 185
    expression_statement <E> (151)
        on left: 188 189
        on right: 175 195 196
    selection_statement <S> (152)
        on left: 190 191 192
        on right: 176
    iteration_statement <S> (153)
        on left: 193 194 195 196
        on right: 177
    jump_statement <S> (154)
        on left: 197 198 199 200 201
        on right: 178
    translation_unit (155)
        on left: 202 203
        on right: 0 203
    external_declaration (156)
        on left: 204 205
        on right: 202 203
    function_definition (157)
        on left: 206 207 208 209
        on right: 204
    declaration_list (158)
        on left: 210 211
        on right: 206 208 211


State 0

    0 $accept: . translation_unit $end

    IDENTIFIER  shift, and go to state 1
    AUTO        shift, and go to state 2
    ENUM        shift, and go to state 3
    RESTRICT    shift, and go to state 4
    UNSIGNED    shift, and go to state 5
    EXTERN      shift, and go to state 6
    VOID        shift, and go to state 7
    FLOAT       shift, and go to state 8
    SHORT       shift, and go to state 9
    VOLATILE    shift, and go to state 10
    CHAR        shift, and go to state 11
    SIGNED      shift, and go to state 12
    CONST       shift, and go to state 13
    BOOL        shift, and go to state 14
    STATIC      shift, and go to state 15
    COMPLEX     shift, and go to state 16
    INLINE      shift, and go to state 17
    IMAGINARY   shift, and go to state 18
    INT         shift, and go to state 19
    DOUBLE      shift, and go to state 20
    LONG        shift, and go to state 21
    REGISTER    shift, and go to state 22
    LEFT_ROUND  shift, and go to state 23
    MUL         shift, and go to state 24

    declaration              go to state 25
    declaration_specifiers   go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31
    declarator               go to state 32
    direct_declarator        go to state 33
    pointer                  go to state 34
    translation_unit         go to state 35
    external_declaration     go to state 36
    function_definition      go to state 37


State 1

  132 direct_declarator: IDENTIFIER .

    $default  reduce using rule 132 (direct_declarator)


State 2

   98 storage_class_specifier: AUTO .

    $default  reduce using rule 98 (storage_class_specifier)


State 3

  117 enum_specifier: ENUM . LEFT_CURLY enumerator_list RIGHT_CURLY
  118               | ENUM . IDENTIFIER LEFT_CURLY enumerator_list RIGHT_CURLY
  119               | ENUM . LEFT_CURLY enumerator_list COMMA RIGHT_CURLY
  120               | ENUM . IDENTIFIER LEFT_CURLY enumerator_list COMMA RIGHT_CURLY
  121               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 38
    LEFT_CURLY  shift, and go to state 39


State 4

  128 type_qualifier: RESTRICT .

    $default  reduce using rule 128 (type_qualifier)


State 5

  108 type_specifier: UNSIGNED .

    $default  reduce using rule 108 (type_specifier)


State 6

   96 storage_class_specifier: EXTERN .

    $default  reduce using rule 96 (storage_class_specifier)


State 7

  100 type_specifier: VOID .

    $default  reduce using rule 100 (type_specifier)


State 8

  105 type_specifier: FLOAT .

    $default  reduce using rule 105 (type_specifier)


State 9

  102 type_specifier: SHORT .

    $default  reduce using rule 102 (type_specifier)


State 10

  127 type_qualifier: VOLATILE .

    $default  reduce using rule 127 (type_qualifier)


State 11

  101 type_specifier: CHAR .

    $default  reduce using rule 101 (type_specifier)


State 12

  107 type_specifier: SIGNED .

    $default  reduce using rule 107 (type_specifier)


State 13

  126 type_qualifier: CONST .

    $default  reduce using rule 126 (type_qualifier)


State 14

  109 type_specifier: BOOL .

    $default  reduce using rule 109 (type_specifier)


State 15

   97 storage_class_specifier: STATIC .

    $default  reduce using rule 97 (storage_class_specifier)


State 16

  110 type_specifier: COMPLEX .

    $default  reduce using rule 110 (type_specifier)


State 17

  129 function_specifier: INLINE .

    $default  reduce using rule 129 (function_specifier)


State 18

  111 type_specifier: IMAGINARY .

    $default  reduce using rule 111 (type_specifier)


State 19

  103 type_specifier: INT .

    $default  reduce using rule 103 (type_specifier)


State 20

  106 type_specifier: DOUBLE .

    $default  reduce using rule 106 (type_specifier)


State 21

  104 type_specifier: LONG .

    $default  reduce using rule 104 (type_specifier)


State 22

   99 storage_class_specifier: REGISTER .

    $default  reduce using rule 99 (storage_class_specifier)


State 23

  133 direct_declarator: LEFT_ROUND . declarator RIGHT_ROUND

    IDENTIFIER  shift, and go to state 1
    LEFT_ROUND  shift, and go to state 23
    MUL         shift, and go to state 24

    declarator         go to state 40
    direct_declarator  go to state 33
    pointer            go to state 34


State 24

  146 pointer: MUL .
  147        | MUL . type_qualifier_list
  148        | MUL . pointer
  149        | MUL . type_qualifier_list pointer

    RESTRICT  shift, and go to state 4
    VOLATILE  shift, and go to state 10
    CONST     shift, and go to state 13
    MUL       shift, and go to state 24

    $default  reduce using rule 146 (pointer)

    type_qualifier       go to state 41
    pointer              go to state 42
    type_qualifier_list  go to state 43


State 25

  205 external_declaration: declaration .

    $default  reduce using rule 205 (external_declaration)


State 26

   82 declaration: declaration_specifiers . SEMICOLON
   83            | declaration_specifiers . init_declarator_list SEMICOLON
  206 function_definition: declaration_specifiers . declarator declaration_list CT compound_statement
  207                    | declaration_specifiers . declarator CT compound_statement

    IDENTIFIER  shift, and go to state 1
    LEFT_ROUND  shift, and go to state 23
    MUL         shift, and go to state 24
    SEMICOLON   shift, and go to state 44

    init_declarator_list  go to state 45
    init_declarator       go to state 46
    declarator            go to state 47
    direct_declarator     go to state 33
    pointer               go to state 34


State 27

   84 declaration_specifiers: storage_class_specifier .
   85                       | storage_class_specifier . declaration_specifiers

    AUTO       shift, and go to state 2
    ENUM       shift, and go to state 3
    RESTRICT   shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    EXTERN     shift, and go to state 6
    VOID       shift, and go to state 7
    FLOAT      shift, and go to state 8
    SHORT      shift, and go to state 9
    VOLATILE   shift, and go to state 10
    CHAR       shift, and go to state 11
    SIGNED     shift, and go to state 12
    CONST      shift, and go to state 13
    BOOL       shift, and go to state 14
    STATIC     shift, and go to state 15
    COMPLEX    shift, and go to state 16
    INLINE     shift, and go to state 17
    IMAGINARY  shift, and go to state 18
    INT        shift, and go to state 19
    DOUBLE     shift, and go to state 20
    LONG       shift, and go to state 21
    REGISTER   shift, and go to state 22

    $default  reduce using rule 84 (declaration_specifiers)

    declaration_specifiers   go to state 48
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 28

   86 declaration_specifiers: type_specifier .
   87                       | type_specifier . declaration_specifiers

    AUTO       shift, and go to state 2
    ENUM       shift, and go to state 3
    RESTRICT   shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    EXTERN     shift, and go to state 6
    VOID       shift, and go to state 7
    FLOAT      shift, and go to state 8
    SHORT      shift, and go to state 9
    VOLATILE   shift, and go to state 10
    CHAR       shift, and go to state 11
    SIGNED     shift, and go to state 12
    CONST      shift, and go to state 13
    BOOL       shift, and go to state 14
    STATIC     shift, and go to state 15
    COMPLEX    shift, and go to state 16
    INLINE     shift, and go to state 17
    IMAGINARY  shift, and go to state 18
    INT        shift, and go to state 19
    DOUBLE     shift, and go to state 20
    LONG       shift, and go to state 21
    REGISTER   shift, and go to state 22

    $default  reduce using rule 86 (declaration_specifiers)

    declaration_specifiers   go to state 49
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 29

  112 type_specifier: enum_specifier .

    $default  reduce using rule 112 (type_specifier)


State 30

   88 declaration_specifiers: type_qualifier .
   89                       | type_qualifier . declaration_specifiers

    AUTO       shift, and go to state 2
    ENUM       shift, and go to state 3
    RESTRICT   shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    EXTERN     shift, and go to state 6
    VOID       shift, and go to state 7
    FLOAT      shift, and go to state 8
    SHORT      shift, and go to state 9
    VOLATILE   shift, and go to state 10
    CHAR       shift, and go to state 11
    SIGNED     shift, and go to state 12
    CONST      shift, and go to state 13
    BOOL       shift, and go to state 14
    STATIC     shift, and go to state 15
    COMPLEX    shift, and go to state 16
    INLINE     shift, and go to state 17
    IMAGINARY  shift, and go to state 18
    INT        shift, and go to state 19
    DOUBLE     shift, and go to state 20
    LONG       shift, and go to state 21
    REGISTER   shift, and go to state 22

    $default  reduce using rule 88 (declaration_specifiers)

    declaration_specifiers   go to state 50
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 31

   90 declaration_specifiers: function_specifier .
   91                       | function_specifier . declaration_specifiers

    AUTO       shift, and go to state 2
    ENUM       shift, and go to state 3
    RESTRICT   shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    EXTERN     shift, and go to state 6
    VOID       shift, and go to state 7
    FLOAT      shift, and go to state 8
    SHORT      shift, and go to state 9
    VOLATILE   shift, and go to state 10
    CHAR       shift, and go to state 11
    SIGNED     shift, and go to state 12
    CONST      shift, and go to state 13
    BOOL       shift, and go to state 14
    STATIC     shift, and go to state 15
    COMPLEX    shift, and go to state 16
    INLINE     shift, and go to state 17
    IMAGINARY  shift, and go to state 18
    INT        shift, and go to state 19
    DOUBLE     shift, and go to state 20
    LONG       shift, and go to state 21
    REGISTER   shift, and go to state 22

    $default  reduce using rule 90 (declaration_specifiers)

    declaration_specifiers   go to state 51
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 32

  208 function_definition: declarator . declaration_list compound_statement
  209                    | declarator . compound_statement

    AUTO        shift, and go to state 2
    ENUM        shift, and go to state 3
    RESTRICT    shift, and go to state 4
    UNSIGNED    shift, and go to state 5
    EXTERN      shift, and go to state 6
    VOID        shift, and go to state 7
    FLOAT       shift, and go to state 8
    SHORT       shift, and go to state 9
    VOLATILE    shift, and go to state 10
    CHAR        shift, and go to state 11
    SIGNED      shift, and go to state 12
    CONST       shift, and go to state 13
    BOOL        shift, and go to state 14
    STATIC      shift, and go to state 15
    COMPLEX     shift, and go to state 16
    INLINE      shift, and go to state 17
    IMAGINARY   shift, and go to state 18
    INT         shift, and go to state 19
    DOUBLE      shift, and go to state 20
    LONG        shift, and go to state 21
    REGISTER    shift, and go to state 22
    LEFT_CURLY  shift, and go to state 52

    declaration              go to state 53
    declaration_specifiers   go to state 54
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31
    compound_statement       go to state 55
    declaration_list         go to state 56


State 33

  131 declarator: direct_declarator .
  134 direct_declarator: direct_declarator . LEFT_SQUARE type_qualifier_list assignment_expression RIGHT_SQUARE
  135                  | direct_declarator . LEFT_SQUARE type_qualifier_list RIGHT_SQUARE
  136                  | direct_declarator . LEFT_SQUARE assignment_expression RIGHT_SQUARE
  137                  | direct_declarator . LEFT_SQUARE RIGHT_SQUARE
  138                  | direct_declarator . LEFT_SQUARE type_qualifier_list MUL RIGHT_SQUARE
  139                  | direct_declarator . LEFT_SQUARE STATIC type_qualifier_list assignment_expression RIGHT_SQUARE
  140                  | direct_declarator . LEFT_SQUARE STATIC assignment_expression RIGHT_SQUARE
  141                  | direct_declarator . LEFT_SQUARE MUL RIGHT_SQUARE
  142                  | direct_declarator . LEFT_ROUND CT parameter_type_list RIGHT_ROUND
  143                  | direct_declarator . LEFT_ROUND identifier_list RIGHT_ROUND
  144                  | direct_declarator . LEFT_ROUND CT RIGHT_ROUND

    LEFT_SQUARE  shift, and go to state 57
    LEFT_ROUND   shift, and go to state 58

    $default  reduce using rule 131 (declarator)


State 34

  130 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 1
    LEFT_ROUND  shift, and go to state 23

    direct_declarator  go to state 59


State 35

    0 $accept: translation_unit . $end
  203 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 60
    IDENTIFIER  shift, and go to state 1
    AUTO        shift, and go to state 2
    ENUM        shift, and go to state 3
    RESTRICT    shift, and go to state 4
    UNSIGNED    shift, and go to state 5
    EXTERN      shift, and go to state 6
    VOID        shift, and go to state 7
    FLOAT       shift, and go to state 8
    SHORT       shift, and go to state 9
    VOLATILE    shift, and go to state 10
    CHAR        shift, and go to state 11
    SIGNED      shift, and go to state 12
    CONST       shift, and go to state 13
    BOOL        shift, and go to state 14
    STATIC      shift, and go to state 15
    COMPLEX     shift, and go to state 16
    INLINE      shift, and go to state 17
    IMAGINARY   shift, and go to state 18
    INT         shift, and go to state 19
    DOUBLE      shift, and go to state 20
    LONG        shift, and go to state 21
    REGISTER    shift, and go to state 22
    LEFT_ROUND  shift, and go to state 23
    MUL         shift, and go to state 24

    declaration              go to state 25
    declaration_specifiers   go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31
    declarator               go to state 32
    direct_declarator        go to state 33
    pointer                  go to state 34
    external_declaration     go to state 61
    function_definition      go to state 37


State 36

  202 translation_unit: external_declaration .

    $default  reduce using rule 202 (translation_unit)


State 37

  204 external_declaration: function_definition .

    $default  reduce using rule 204 (external_declaration)


State 38

  118 enum_specifier: ENUM IDENTIFIER . LEFT_CURLY enumerator_list RIGHT_CURLY
  120               | ENUM IDENTIFIER . LEFT_CURLY enumerator_list COMMA RIGHT_CURLY
  121               | ENUM IDENTIFIER .

    LEFT_CURLY  shift, and go to state 62

    $default  reduce using rule 121 (enum_specifier)


State 39

  117 enum_specifier: ENUM LEFT_CURLY . enumerator_list RIGHT_CURLY
  119               | ENUM LEFT_CURLY . enumerator_list COMMA RIGHT_CURLY

    IDENTIFIER  shift, and go to state 63

    enumerator_list  go to state 64
    enumerator       go to state 65


State 40

  133 direct_declarator: LEFT_ROUND declarator . RIGHT_ROUND

    RIGHT_ROUND  shift, and go to state 66


State 41

  150 type_qualifier_list: type_qualifier .

    $default  reduce using rule 150 (type_qualifier_list)


State 42

  148 pointer: MUL pointer .

    $default  reduce using rule 148 (pointer)


State 43
